# GameOfLife

./: .gitignore  CMakeLists.txt  main.cpp
